solve horizontal scroll problem

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,9 @@
 /*--------general---------*/
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     padding-top: 100px;
     padding-bottom: 5%;
